Add widget development files & bump version

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
+test/javasource/
 test/deployment/
 test/.classpath
 test/.project
-test/BootstrapRTETest.mpr.lock
-test/test.launch
-test/javasource/
-.idea/
-src/widget.mws
-node_modules/
+*.launch
+*.tmp
 *.lock
+.idea/
+
+*DS_Store*
+node_modules/
+dist/
