--- a/.jshintrc
+++ b/.jshintrc
@@ -19,5 +19,7 @@
     // Environments
     "browser"  : true,
     "devel"    : true,
-    "dojo"     : true
+    "dojo"     : true,
+
+    "-W040"     : true
 }
